# ImageStichingRos

./: CMakeLists.txt  CMakeLists.txt~  Readme.md  package.xml  package.xml~
include/: node_merged_videos.h
launch/: irislaunch.launch~
src/: main.cpp  node_merged_videos.cpp
tests/: utest.cpp
